# bogt-rando

./: .gitignore  requirements.txt  setup.cfg
bogt_rando/: mutate.py
bogt_rando/cmd/: mutate.py  rand.py
