[metadata]
name = bogt-rando
summary = Contributes commands to bogt to randomly generate GT-100 patches
description-file =
    README.rst
author = Steve Baker
author-email = steve@stevebaker.org
home-page = https://github.com/steveb/bogt-rando
classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Multimedia :: Sound/Audio :: MIDI
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    bogt_rando

[entry_points]

bogt.cli = 
    rand = bogt_rando.cmd.rand:RandCmd
    mutate = bogt_rando.cmd.mutate:MutateCmd

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
